# business_rules

./: .gitignore  README.md  pyproject.toml
docs/: creating-a-converter.md  creating-a-data-type.md  creating-a-translator.md  development.md  name-normalizers.md  setup.md
src/bridges/: __init__.py
src/business_rules/: __init__.py  action.py  builder.py  business_rule.py  condition.py  context.py  engine.py  evaluation.py  example.py  executable.py  operand.py  target.py  verifiable.py
src/business_rules/bridges/sqlalchemy2/: __init__.py  bridge.py
src/business_rules/context/: __init__.py  base.py  lazy_context.py  object_context.py
src/business_rules/converters/: __init__.py  base.py  dict_converter.py  json_converter.py
src/business_rules/data_types/: __init__.py  base.py  boolean.py  date.py  datetime_type.py  decimal.py  guesser_pool.py  integer.py  pool.py  string.py
src/business_rules/name_normalizers/: __init__.py  _words.py  base.py  builtin.py
src/business_rules/operators/: __init__.py  base.py  builtin.py  implements.py  pool.py
src/business_rules/translators/: __init__.py  base.py  dict_translator.py  json_translator.py
tests/: test_action.py  test_best_practice.py  test_builder.py  test_business_rule.py  test_client_extension.py  test_complex_business_rule.py  test_condition.py  test_context.py  test_converters.py  test_data_types_base.py  test_data_types_operators.py  test_data_types_pool.py  test_data_types_unregistered_operator.py  test_engine.py  test_example.py  test_executable.py  test_guesser_pool.py  test_lazy_context.py  test_name_normalizer.py  test_nested_context.py  test_object_context.py  test_operand.py  test_operator.py  test_operators_pool.py  test_target.py  test_translators.py  test_verifiable.py
tests/sqlalchemy2/: test_bridge_lazy_import.py  test_import.py  test_import_without_dependency.py
