[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "business-rules"
version = "0.1.0"
description = "A Python library"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
sqlalchemy2 = [
    "sqlalchemy>=2.0,<3",
]
dev = [
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "sqlalchemy>=2.0,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/business_rules", "src/bridges"]

[tool.hatch.build]
include = [
    "src/business_rules/py.typed",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["bridges", "business_rules"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["bridges", "business_rules"]

[tool.coverage.run]
source = ["bridges", "business_rules"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
